--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h2 {
 	font-size: 0.8rem;
 }
 p {
-	font-size: 0.6rem;
+	font-size: 0.5rem;
 }
 
 .image {
@@ -39,7 +39,7 @@ p {
 	line-height: 0.5;
 }
 #top-contact .top-contact .top-contact_content h6 {
-	font-size: 0.8rem;
+	font-size: 0.7rem;
 }
 #nav {
 	padding-top: 20px;
@@ -58,7 +58,7 @@ p {
 }
 .navbar1 .navbar-nav1 li {
 	list-style-type: none;
-	font-size: 0.6rem;
+	font-size: 0.5rem;
 	padding: 0 10px;
 }
 
@@ -90,7 +90,7 @@ p {
 	line-height: 0.5;
 }
 #section2 .btn {
-	font-size: 0.6rem;
+	font-size: 0.5rem;
 	margin-top: 0;
 	
 }
@@ -201,7 +201,7 @@ p {
 	font-weight: bolder;
 }
 .card a {
-	font-size: 0.6rem;
+	font-size: 0.5rem;
 }
 
 
@@ -225,7 +225,7 @@ p {
 	background-color: green;
 	border-radius: 5px;
 	color: white;
-	font-size: 0.6rem;
+	font-size: 0.5rem;
 	padding: 5px 20px;
 }
 #section6 .accordion .collapse p {
@@ -259,12 +259,23 @@ p {
 }
 
 .investment-plans_container .card .btn {
-	font-size: 0.6rem;
+	font-size: 0.5rem;
 	padding: 5px;
 	border-radius: 15px;
 	width: 80px;
 }
 
+#testimonials .carousel-caption {
+	top: 40%;
+	
+}
+#testimonials .carousel-caption p {
+	font-size: 0.9rem;
+}
+#testimonials .carousel-caption .btn {
+	font-size: 0.6rem;
+
+}
 #team {
 	padding: 50px 0;
 }
@@ -360,7 +371,7 @@ p {
 }
 .footer-text {
 	font-weight: bolder;
-	font-size: 0.6rem;
+	font-size: 0.5rem;
 }
 
 .footer-logo {
