--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ p {
 	color: black;
 }
 #section1 {
-	padding: 20px 10px;
-
+	padding: 50px 10px 10px 10px;
+	background-color: rgb(247, 245, 245);
 }
 #section1 h1 {
 	font-size: 1rem;
@@ -89,6 +89,11 @@ p {
 .deposit {
 	line-height: 0.5;
 }
+
+#section2 img {
+	
+	height: 100%;
+}
 #section2 .btn {
 	font-size: 0.5rem;
 	margin-top: 0;
@@ -96,7 +101,8 @@ p {
 }
 /* styling the features section */
 #section3 {
-	padding: 100px 10px;
+	padding: 50px 10px;
+	background-color: rgb(247, 245, 245);
 }
 #section3 h2 {
 	text-align: center;
@@ -112,11 +118,12 @@ p {
 }
 .section3-card {
 	margin: 20px 7px 0 7px;
-	padding: 15px;
+	padding: 10px;
 	border: none;
 	position: relative;
 	overflow: hidden;
 }
+
 .section3-card .icon {
 	position: relative;
   z-index: 1;
@@ -126,7 +133,7 @@ p {
 .section3-card .icon .shape-box {
 	z-index: 999;
   position: absolute;
-  left: 20px;
+  left: 15px;
   top: 8px;
 	transform: rotate(-20deg);
   -webkit-transform: rotate(-20deg);
@@ -139,7 +146,7 @@ p {
 	left: 0;
   top: 0;
 	opacity: 1;
-  height: 18px;
+  height: 13px;
   width: 3px;
   background: #ffffff; 
 }
@@ -165,10 +172,10 @@ p {
 }
 .section3-card > i,  .section3-card .icon i {
 	display: inline-block;
-	height: 110px;
-	width: 110px;
+	height: 80px;
+	width: 80px;
 	text-align: center;
-	line-height: 110px;
+	line-height: 90px;
 	background: #ff4450;
 	clip-path: polygon(100% 50%, 65.45085% 97.55283%, 9.54915% 79.38926%, 9.54915% 20.61074%, 65.45085% 2.44717%);
 	color: #ffffff;
@@ -196,8 +203,8 @@ p {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }*/
-.card h4 {
-	font-size: 0.6rem;
+.card h5 {
+	font-size: 0.5rem;
 	font-weight: bolder;
 }
 .card a {
@@ -328,6 +335,7 @@ p {
 
 .customer-rating .checked {
 	color: black;
+	font-size: 10px;
 }
 
 #call-back {
@@ -349,7 +357,7 @@ p {
 
 #footer {
 	background-color: darkblue;
-	padding: 50px 20px;
+	padding: 50px 20px 30px 10px;
 	color: white;
 	
 }
@@ -362,7 +370,7 @@ p {
 	justify-content: space-between;
 }
 .footer-about {
-	width: 50%;
+	width: 30%;
 }
 .footer-container h4 {
 	font-size: 0.9rem;
@@ -387,8 +395,10 @@ p {
 .footer-logo img {
 	height: 50px;
 	width: 50%;
+	object-fit: contain;
 }
 
 .footer-logo p {
 	align-self: center;
+	padding-left: 10px;
 }
